add virtual queue
